--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -450,8 +450,10 @@
         <item>5</item>
     </integer-array>
     <string-array name="networkAttributes">
-        <item>wifi,1,1,1,-1,true</item>
+        <item>wifi,1,1,2,-1,true</item>
+        <item>bluetooth,7,7,0,-1,true</item>
         <item>wifi_p2p,13,1,0,-1,true</item>
+        <item>ethernet,9,9,9,-1,true</item>
     </string-array>
     <integer-array name="config_protectedNetworks">
         <item>10</item>
@@ -460,7 +462,8 @@
     </integer-array>
     <string-array name="radioAttributes">
         <item>1,1</item>
-        <item>0,1</item>
+        <item>7,1</item>
+        <item>9,1</item>
     </string-array>
     <integer-array name="config_data_usage_network_types">
         <item>0</item>
@@ -478,10 +481,7 @@
     <array name="config_tether_bluetooth_regexs" />
     <array name="config_tether_dhcp_range" />
     <array name="config_mobile_hotspot_provision_app" />
-    <integer-array name="config_tether_upstream_types">
-        <item>1</item>
-        <item>4</item>
-    </integer-array>
+    <array name="config_tether_upstream_types" />
     <array name="config_cdma_dun_supported_types" />
     <array name="config_usbHostBlacklist" />
     <array name="config_serialPorts" />
